Created a new script
CreateScriptToTryOutGitHub

--- a/Agartha/Assembly-CSharp.csproj
+++ b/Agartha/Assembly-CSharp.csproj
@@ -6,7 +6,7 @@
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <RootNamespace></RootNamespace>
-    <ProjectGuid>{7F1949A2-EE76-EA89-3035-CACFA3AD7E94}</ProjectGuid>
+    <ProjectGuid>{95CE7FB4-0046-CAE1-53DF-8EEE6DADFAEE}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <AssemblyName>Assembly-CSharp</AssemblyName>
@@ -38,16 +38,17 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="UnityEngine">
-      <HintPath>C:/Program Files/Unity/Editor/Data/Managed/UnityEngine.dll</HintPath>
+      <HintPath>D:/Unity/Editor/Data/Managed/UnityEngine.dll</HintPath>
     </Reference>
     <Reference Include="UnityEditor">
-      <HintPath>C:/Program Files/Unity/Editor/Data/Managed/UnityEditor.dll</HintPath>
+      <HintPath>D:/Unity/Editor/Data/Managed/UnityEditor.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\AdjustVolume.cs" />
      <Compile Include="Assets\AudioManagerScript.cs" />
      <Compile Include="Assets\BackScripts.cs" />
+     <Compile Include="Assets\CreateScriptToTryOutGitHub.cs" />
      <Compile Include="Assets\MainMenuScript.cs" />
      <Compile Include="Assets\Scripts\Door\TeleportScripts.cs" />
      <Compile Include="Assets\Scripts\DragAndDrop\DragHandle.cs" />
@@ -123,10 +124,10 @@
      <Compile Include="Assets\Scripts\UI\UpdateUI.cs" />
      <Compile Include="Assets\SoundManagerScript.cs" />
  <Reference Include="UnityEngine.UI">
- <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
+ <HintPath>D:/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
  <Reference Include="UnityEngine.Networking">
- <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/Networking/UnityEngine.Networking.dll</HintPath>
+ <HintPath>D:/Unity/Editor/Data/UnityExtensions/Unity/Networking/UnityEngine.Networking.dll</HintPath>
  </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
